# lens-tauri

./: .gitignore  index.html  package.json  vite.config.ts
src/: brain.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
